# pAIpesense

./: LICENSE  README.md
data/data_collecting/: app.py
device/: .gitignore  README.md  arduine-BLE.md
device/app/: Cargo.toml
device/app/src/: lib.rs
device/zephyr/: CMakeLists.txt  prj.conf
device/zephyr/boards/: arduino_nano_33_ble_sense.overlay
device/zephyr/src/: main.c
docs/architecture/: arch.md
docs/device/: arduine-BLE.md
enclosure/: enclosure_simple.scad
